--- a/views/login.ejs
+++ b/views/login.ejs
@@ -119,6 +119,13 @@
                         }, 400);
                         $('#showInfo').text('登陆出错，请联系管理员！').fadeIn();
                         break;
+                    case 'perr':
+                        $('#panel').addClass('justShake1');
+                        setTimeout(function () {
+                            $('#panel').removeClass('justShake1');
+                        }, 400);
+                        $('#showInfo').text('数据格式不对，请检查！').fadeIn();
+                        break;
                     case 'noUser':
                         $('#panel').addClass('justShake1');
                         setTimeout(function () {
